# gnubiff-xfce

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  configure.ac  gnubiff.spec  intltool-extract  intltool-merge  intltool-merge.in  intltool-update
art/: Makefile  Makefile.am  Makefile.in
config/: config.h  config.h.in  gnubiff.spec  gnubiff.spec.in  intltool-merge.in  intltool-update.in
doc/: gnubiff.info  gnubiff.texi  version.texi
man1/: gnubiff.1
pixmaps/: Makefile.am
po/: LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  cs.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  fr_CA.gmo  fr_CA.po  fr_FR.gmo  fr_FR.po  gnubiff.pot  hu.po  id.po  it.gmo  it.po  nl.gmo  nl.po  pt.po  pt_BR.po  ro.gmo  ro.po  rw.po  sv.gmo  sv.po  vi.po
sounds/: Makefile.am
src/: Apop.cc  Apop.h  Applet.cc  Applet.h  AppletGNOME.cc  AppletGNOME.glade  AppletGNOME.h  AppletGTK.cc  AppletGTK.glade  AppletGTK.h  Biff.cc  Biff.h  File.cc  File.h  GNOME_gnubiffApplet.server.in  GNOME_gnubiffApplet.server.in.in  GNOME_gnubiffApplet.xml  GUI.cc  GUI.h  Imap4.cc  Imap4.h  Mailbox.cc  Mailbox.h  Maildir.cc  Maildir.h  Makefile  Makefile.am  Mh.cc  Mh.h  Pop.cc  Pop.h  Pop3.cc  Pop3.h  Popup.cc  Popup.glade  Popup.h  Setup.cc  Setup.glade  Setup.h  apop.cc  (+77 more)
ui/: Makefile  Makefile.am  Makefile.in  applet-gnome.glade  applet-gnome.gladep  applet-gtk.glade  applet-gtk.ui  authentication.glade  authentication.ui  certificate.glade  certificate.ui  gnubiff.desktop.in  popup.glade  popup.ui  preferences.glade  preferences.ui  properties.glade  properties.ui
