## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dist-gzip dist-bzip2

SUBDIRS = po src pixmaps sounds doc man1

EXTRA_DIST = \
	intltool-update.in	\
	intltool-extract.in	\
	intltool-merge.in	\
	THANKS				\
	gnubiff.spec

DISTCLEANFILES = \
        intltool-extract        \
        intltool-merge          \
        intltool-update		\
	po/.intltool-merge-cache
