gnubiffdir = $(pkgdatadir)
dist_gnubiff_DATA = \
		envelopes.png			\
		gnubiff.png				\
		menu_about.png			\
		menu_mail_read.png		\
		menu_mail_start.png		\
		logo.png				\
		tux-awake.png			\
		tux-jump(64x64).png		\
		tux-sleep(64x64).png	\
		tux-sleep.png

gnomedir = $(datadir)/pixmaps
dist_gnome_DATA = \
		gnubiff.png
